--- a/Control_Flow/Control_Flow.html
+++ b/Control_Flow/Control_Flow.html
@@ -150,8 +150,6 @@ else:
 
 ## if-elif-else 语句
 
-> 这里可以有多个elif部分，每个elif后面都跟着一个条件和相应的语句。如果condition1为True，执行statement1；否则，检查condition2，如果为True，执行statement2；如果所有的条件都不为True，执行statement3.例如：
-
 ```python
 x = 0
 if x > 0:
@@ -207,6 +205,148 @@ def fly():
     else:
         print("没有机票不能登机")
 ```
+
+---
+
+# 列表，元组与字典
+
+* 列表、元组和字典是Python中常用的数据结构，它们各自有不同的特点和使用场景
+
+---
+
+## List（列表）
+
+* construct(构造) : li = [1, 2, 3]
+
+  * 元素之间用逗号分隔
+
+* visit(访问) : li[index]
+
+  * **与字符串的索引一样，列表索引从0开始**
+
+* change(改变): li[index] = ...
+
+* slide(切片): li[from:to:step]
+
+* length(长度)
+
+  * len(li) 获取列表中元素个数
+
+* operator运算符
+
+  * '+' 可以连接两个list
+
+---
+
+## List
+
+### Methods
+
+* append $~~~~~~~$li.append(item) $~~~~~~~~~~~~~~~~$结尾追加一个元素
+* insert $~~~~~~~~~~$li.insert(index, item) $~~~~~~~~~$在指定位置插入一个元素
+* remove $~~~~~~~$li.remove(item) $~~~~~~~~~~~~~~~~$删除指定值的元素
+* pop $~~~~~~~~~~~$ item = li.pop(index) $~~~~~~~~~$删除指定位置的元素, 并返回删除的元素的值
+* index $~~~~~~~~~$ obj = li.index(item) $~~~~~~~~~$从列表中找出某个值第一个匹配项的索引位置
+* sort $~~~~~~~~~~~$ li.sort() $~~~~~~~~~~~~~~~~~~~~~~~~~~~~~$排序，默认从小到大
+* reverse$~~~~~~~$ li.reverse() $~~~~~~~~~~~~~~~~~~~~~~~~$将列表反向
+
+---
+
+## List
+
+### Nested list 嵌套列表
+
+* 我们可以在list中嵌套其他list
+
+* matrix = [[1, 2, 3], [4, 5, 6]] (二维列表)
+
+---
+
+## Tuple（元组）
+
+* Python 的元组与列表类似，**不同之处在于元组的元素不能修改**。
+
+* 元组使用小括号，列表使用方括号。
+
+* 元组创建很简单，只需要在括号中添加元素，并使用逗号隔开即可。
+
+```python
+tup1 = ('physics', 'chemistry', 1997, 2000)
+tup2 = (1, 2, 3, 4, 5 )
+tup3 = (50,) #元组中只包含一个元素时，需要在元素后面添加逗号
+```
+
+* 访问方法和list相同，只是元组中的元素值是不允许修改的。
+
+---
+
+## Set（集合）
+
+* 集合（set）是一个无序的不重复元素序列。
+
+* 集合中的元素不会重复，并且可以进行交集、并集、差集等常见的集合操作
+
+* 可以使用大括号 { } 创建集合，元素之间用逗号 , 分隔， 或者也可以使用 set() 函数创建集合
+
+```python
+set1 = {1, 2, 3, 4}            # 直接使用大括号创建集合
+set2 = set([4, 5, 6, 7])      # 使用 set() 函数从列表创建集合
+```
+
+---
+
+## Dict（字典）
+
+* 字典的每个键值 **key:value** 对用冒号 : 分割，每个键值对之间用逗号 , 分割，整个字典包括在花括号 {} 中 ,格式如下所示：
+
+```python
+d = {key1 : value1, key2 : value2 }
+```
+
+* 键一般是唯一的、不可变的，如果重复最后的一个键值对会替换前面的，值不需要唯一。
+
+```python
+tinydict = {'Alice': '2341', 'Beth': '9102', 'Cecil': '3258'}
+```
+
+* 其中``Alice,Beth,Cecil``是``key``，``2341,9102,3258``是``value``,
+形如``Alice:2341``的我们称之为**键值对** (key-value pairs)
+
+---
+
+## Dict（字典）
+
+* construct(构造): di = {‘1’: 1, ‘2’: 2, ‘3’: 3}
+
+* visit(访问): print(di[‘1’])
+
+* change(改变): di[‘1’] = 100
+
+* delete(删除): del di[‘1’]
+
+---
+
+## Example
+
+```python
+>>> tinydict = {'a': 1, 'b': 2, 'b': '3'}
+>>> tinydict['b']
+'3'
+>>> tinydict
+{'a': 1, 'b': '3'}
+```
+
+---
+
+## 区分python中的四种集合数据类型（列表，元组，集合，字典）
+
+1. 列表（List）：有序，可更改，可以有重复的成员
+
+2. 元组（tuple）：有序，不可更改，可以有重复的成员
+
+3. 集合（set）：无序，无索引，没有重复的成员。
+
+4. 字典 （Dictionary）：无序，可更改，有索引，没有重复的成员
 
 ---
 
@@ -347,148 +487,6 @@ print(f"十进制数 {decimal_number} 转换为二进制数是: {binary_number}"
 ```
 
 * 请注意：这里最后的**binary_num**事实上是**string**类型的
-
----
-
-# 列表，元组与字典
-
-* 列表、元组和字典是Python中常用的数据结构，它们各自有不同的特点和使用场景
-
----
-
-## List（列表）
-
-* construct(构造) : li = [1, 2, 3]
-
-  * 元素之间用逗号分隔
-
-* visit(访问) : li[index]
-
-  * **与字符串的索引一样，列表索引从0开始**
-
-* change(改变): li[index] = ...
-
-* slide(切片): li[from:to:step]
-
-* length(长度)
-
-  * len(li) 获取列表中元素个数
-
-* operator运算符
-
-  * '+' 可以连接两个list
-
----
-
-## List
-
-### Methods
-
-* append $~~~~~~~$li.append(item) $~~~~~~~~~~~~~~~~$结尾追加一个元素
-* insert $~~~~~~~~~~$li.insert(index, item) $~~~~~~~~~$在指定位置插入一个元素
-* remove $~~~~~~~$li.remove(item) $~~~~~~~~~~~~~~~~$删除指定值的元素
-* pop $~~~~~~~~~~~$ item = li.pop(index) $~~~~~~~~~$删除指定位置的元素, 并返回删除的元素的值
-* index $~~~~~~~~~$ obj = li.index(item) $~~~~~~~~~$从列表中找出某个值第一个匹配项的索引位置
-* sort $~~~~~~~~~~~$ li.sort() $~~~~~~~~~~~~~~~~~~~~~~~~~~~~~$排序，默认从小到大
-* reverse$~~~~~~~$ li.reverse() $~~~~~~~~~~~~~~~~~~~~~~~~$将列表反向
-
----
-
-## List
-
-### Nested list 嵌套列表
-
-* 我们可以在list中嵌套其他list
-
-* matrix = [[1, 2, 3], [4, 5, 6]] (二维列表)
-
----
-
-## Tuple（元组）
-
-* Python 的元组与列表类似，**不同之处在于元组的元素不能修改**。
-
-* 元组使用小括号，列表使用方括号。
-
-* 元组创建很简单，只需要在括号中添加元素，并使用逗号隔开即可。
-
-```python
-tup1 = ('physics', 'chemistry', 1997, 2000)
-tup2 = (1, 2, 3, 4, 5 )
-tup3 = (50,) #元组中只包含一个元素时，需要在元素后面添加逗号
-```
-
-* 访问方法和list相同，只是元组中的元素值是不允许修改的。
-
----
-
-## Set（集合）
-
-* 集合（set）是一个无序的不重复元素序列。
-
-* 集合中的元素不会重复，并且可以进行交集、并集、差集等常见的集合操作
-
-* 可以使用大括号 { } 创建集合，元素之间用逗号 , 分隔， 或者也可以使用 set() 函数创建集合
-
-```python
-set1 = {1, 2, 3, 4}            # 直接使用大括号创建集合
-set2 = set([4, 5, 6, 7])      # 使用 set() 函数从列表创建集合
-```
-
----
-
-## Dict（字典）
-
-* 字典的每个键值 **key:value** 对用冒号 : 分割，每个键值对之间用逗号 , 分割，整个字典包括在花括号 {} 中 ,格式如下所示：
-
-```python
-d = {key1 : value1, key2 : value2 }
-```
-
-* 键一般是唯一的、不可变的，如果重复最后的一个键值对会替换前面的，值不需要唯一。
-
-```python
-tinydict = {'Alice': '2341', 'Beth': '9102', 'Cecil': '3258'}
-```
-
-* 其中``Alice,Beth,Cecil``是``key``，``2341,9102,3258``是``value``,
-形如``Alice:2341``的我们称之为**键值对** (key-value pairs)
-
----
-
-## Dict（字典）
-
-* construct(构造): di = {‘1’: 1, ‘2’: 2, ‘3’: 3}
-
-* visit(访问): print(di[‘1’])
-
-* change(改变): di[‘1’] = 100
-
-* delete(删除): del di[‘1’]
-
----
-
-## Example
-
-```python
->>> tinydict = {'a': 1, 'b': 2, 'b': '3'}
->>> tinydict['b']
-'3'
->>> tinydict
-{'a': 1, 'b': '3'}
-```
-
----
-
-## python中的四种集合数据类型（列表，元组，集合，字典）
-
-1. 列表（List）：有序，可更改，可以有重复的成员
-
-2. 元组（tuple）：有序，不可更改，可以有重复的成员
-
-3. 集合（set）：无序，无索引，没有重复的成员。
-
-4. 字典 （Dictionary）：无序，可更改，有索引，没有重复的成员
 
 ---
 
@@ -845,7 +843,28 @@ Output:
 
 ## 列表推导式
 
-* 总的来说，Python 的列表推导式是一种非常强大的工具，可以使我们的代码更简洁、更直观。但是，需要注意的是，当列表推导式变得过于复杂时，可能会使代码的可读性降低。在这种情况下，可能需要考虑使用传统的循环结构或函数来替代。
+* 总的来说，Python 的列表推导式是一种非常强大的工具，可以使我们的代码更简洁、更直观。
+* 但是，需要注意的是，当列表推导式变得过于复杂时，可能会使代码的可读性降低。在这种情况下，可能需要考虑使用传统的循环结构或函数来替代。
+
+---
+
+# Summary
+
+本节课我们学习了：
+
+* 条件语句
+  * if-elif-else 语句
+  * Nested if-statements
+* List,tuple and dict的概念和简单操作
+* 循环语句
+  * While 循环
+  * For 循环
+* 列表推导式基础
+
+---
+
+# Thanks for your listening!
+
 
           </textarea>
         </section>
