deploy: 3ea896ec9037c5ece65581f3defc28e79920bccc

--- a/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.html
+++ b/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.html
@@ -646,7 +646,7 @@ Python 中的 **基本运算符 (operator)** 有：`+`, `-`, `*`, `/`, `//`, `%`
 标准输入输出的操作目标是命令行/控制台，通常用于交互式环境（REPL，Read-Eval-Print Loop）。其中：
 
 - `input()` 用于从用户输入获取数据。
-- `print(x)` 用于在屏幕上打印变量 `x`，结尾附默认加一个换行。
+- `print(x)` 用于在屏幕上打印变量 `x`，结尾默认附加一个换行。
   - `print(x, end="abc")` 可以把结尾的换行符替换为 `abc`。
   - 相似地，`print(x, end="")` 可去掉默认附加的换行。
 - 使用 `input(x)` 可在接收输入时先输出变量 `x`，以便提示用户输入。
