deploy: 47887383298cfaaa71e7d28ca68e3ecbe1524786

--- a/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.html
+++ b/Lecture_PY_02_Var_Operator_Expr/Lecture_PY_02_Var_Operator_Expr.html
@@ -804,12 +804,10 @@ Python 的布尔运算符就能够这样“偷懒”。
 
 ## 常见运算符优先级
 
-<div class="middle center">
-  <div style="width: 100%; margin-top: -150px;">
+<div style="width: 100%; margin-top: 10px; text-align: center;">
 
-  <font size="6"> 类型转换 > `**` > 正负号 (`+x`, `-x`) > [`*`, `/`, `//`, `%`] > [`+`, `-`] > 比较运算符 (`==`, `!=`, `<`, `<=`, `>`, `>=`) > 布尔运算符 (`and`, `or`, `not`, ...) > ... </font>
+<font size="6"> 类型转换 > `**` > 正负号 (`+x`, `-x`) > [`*`, `/`, `//`, `%`] > [`+`, `-`] > 比较运算符 (`==`, `!=`, `<`, `<=`, `>`, `>=`) > 布尔运算符 (`and`, `or`, `not`, ...) > ... </font>
   
-  </div>
 </div>
 
 <!--s-->
