--- a/Lecture_PY_03_Function/index.html
+++ b/Lecture_PY_03_Function/index.html
@@ -185,7 +185,7 @@ Type:      builtin_function_or_method
 
 **演示** `"ABC123".isupper()"`
 
-- <span>为什么是 False?</span> <!-- .element: class="fragment" data-fragment-index="1" -->
+- <span>为什么是 `True`?</span> <!-- .element: class="fragment" data-fragment-index="1" -->
 - <span>`help("ABC123".isupper)` 一下？</span> <!-- .element: class="fragment" data-fragment-index="2" -->
 
 > 尽管我们用简短的文字介绍了他们，但是还有很多细节是我们忽略了的
