--- a/Lecture_04_ControlFlow/Lecture_04_ControlFlow.html
+++ b/Lecture_04_ControlFlow/Lecture_04_ControlFlow.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <title>Lecture_03_Function</title>
+    <title>Lecture_04_Control_Flow</title>
     <link rel="shortcut icon" href="./favicon.ico" />
     <link rel="stylesheet" href="./dist/reset.css" />
     <link rel="stylesheet" href="./dist/reveal.css" />
