deploy: 697fc17059b47531dadeaf20b3e40220bd02f2bc

--- a/Lecture_00_Environment/Lecture_00_Environment.html
+++ b/Lecture_00_Environment/Lecture_00_Environment.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <title>Lecture_00_Environments</title>
+    <title>Lecture_00_Environment</title>
     <link rel="shortcut icon" href="./favicon.ico" />
     <link rel="stylesheet" href="./dist/reset.css" />
     <link rel="stylesheet" href="./dist/reveal.css" />
@@ -271,7 +271,7 @@
       // options from URL query string
       var queryOptions = Reveal().getQueryHash() || {};
 
-      var options = extend(defaultOptions, {"transition":"slide","transitionSpeed":"fast","center":false,"slideNumber":"c/t","width":1000,"_":["./Lecture_00_Environment/Lecture_00_Enivronment.md"],"static":"static/Lecture_00_Enivronment"}, queryOptions);
+      var options = extend(defaultOptions, {"transition":"slide","transitionSpeed":"fast","center":false,"slideNumber":"c/t","width":1000,"_":["./Lecture_00_Environment/Lecture_00_Environment.md"],"static":"static/Lecture_00_Environment"}, queryOptions);
     </script>
 
 
