--- a/Lecture_04_ControlFlow/index.html
+++ b/Lecture_04_ControlFlow/index.html
@@ -814,7 +814,7 @@ print(is_prime(input_num))
 
 <!--s-->
 
-<div style="display: flex; justify-content: center; align-items: center; height: 700px;   ">
+<div style="display: flex; justify-content: center; align-items: center; height: 700px;" id="canvas">
   <div style="text-align: center; padding: 40px; background-color: white; border-radius: 20px; box-shadow: 0 0 20px rgba(0,0,0,0.1);">
     <div style="display: inline-block; padding: 20px 40px; border-radius: 10 px; margin-bottom: 20px;">
       <h1 style="font-size: 48px; font-weight: bold; margin: 0; color: rgb(16, 33, 89)">Thanks for Listening</h1>
@@ -883,7 +883,7 @@ my_info = { # 这里用了一个比较美观的换行写法，适用于长文本
 
 ## 格式化输出：让输出更美，字符串不分家！
 
-- [**判断奇偶的代码**]()里涉及到了一点关于 [格式化输出](https://docs.python.org/zh-cn/3/tutorial/inputoutput.html) 的用法，RTFM
+- **判断奇偶的代码**里涉及到了一点关于 [格式化输出](https://docs.python.org/zh-cn/3/tutorial/inputoutput.html) 的用法，RTFM
     - 字符串前的 `f` 是什么意思？
     - 字符串里的 `{i:2}` 是什么意思？运行的时候被替换成了什么？
     - 如果去掉 `:2` 输出是什么？你能明白 `:2` 的意思了吗？
