--- a/Py进阶_Raw/index.html
+++ b/Py进阶_Raw/index.html
@@ -79,15 +79,15 @@
 
 ### List 的常用操作
 
-* Slides（切片）: `li[start:stop:step]`
-  - `start`：切片起始索引（**包括**该索引的元素），默认为第一个元素（索引 `0`）。
-  - `stop`：切片结束索引（**不包括**该索引的元素），默认为最后一个元素（索引 `-1`）的下一个（虽然最后一个元素没有“下一个”，但这样能够默认包括最后一个元素）。
+* Slides（切片）: `li[start:stop:step]` 获得列表中的某一部分子列表。
+  - `start`：切片起始索引（**含**该索引的元素），默认为第一个元素（索引 `0`）。
+  - `stop`：切片结束索引（**不含**该索引的元素），默认为最后一个元素（索引 `-1`）的下一个（虽然最后一个元素没有“下一个”，但这样能够默认包括最后一个元素）。
   - `step`：步长：用于指定取一个元素后，应该往后多少个去取下一元素。
-    - 默认为 1，即不跳过任何元素。可以理解为“每隔 `step-1` 个元素取一个”
+    - 可以理解为“每隔 `step-1` 个元素取一个”。默认为 1，即连续取元素。
       - 如果下一元素的索引超过了 `stop` 则不会包含下一元素。
     - 如果是正数，切片会从左到右取值；如果是负数，则从右到左取值。
   - 切片时， 必须给出 `start` *或* `stop` 两者之一，`step` 则是可选的。
-  - 例如：`li[1:-1:2]` 意为从第二个（包括第二个）元素开始，到最后一个（不包括最后一个）元素结束，且每隔一个元素取一个。
+  - 例如：`li[1:-1:2]` 意为从第二个元素（含）起，到倒数第一个元素（不含）结束，且每隔一个元素取一个。
 
 ---
 
@@ -106,7 +106,7 @@
 |---|---|---|
 | append 附加 | `li.append(item)` | 结尾追加一个元素
 | insert 插入 | `li.insert(idx, item)` | 在指定位置插入一个元素
-| remove 移除 |  `li.remove(item)` | 删除指定值的元素
+| remove 移除 |  `li.remove(item)` | 删除某个值的第一个匹配项
 | pop 弹出 |  `item = li.pop(index)` | 删除指定位置的元素（如不指定则默认为 `-1`）, 并返回删除的元素的值
 | index 索引 |  `obj = li.index(item)` | 从列表中找出某个值第一个匹配项的索引位置
 | sort 排序 |  `li.sort()` | 排序，默认从小到大（升序）
@@ -137,7 +137,7 @@ matrix = [[1, 2, 3], [4, 5, 6]] # 二维列表
 
 ```python
 tup1 = ('physics', 'chemistry', 1997, 2000)
-tup2 = (1, 2, 3, 4, 5 )
+tup2 = (1, 2, 3, 4, 5)
 tup3 = (50,) #元组中只包含一个元素时，需要在元素后面添加逗号
 ```
 
@@ -147,7 +147,7 @@ tup3 = (50,) #元组中只包含一个元素时，需要在元素后面添加逗
 
 ## Set（集合）
 
-* 集合（set）是一个无序的不重复元素序列。
+* 集合（set）是一个无序的不重复元素序列。**集合的元素无法修改**。
 
 * 集合中的元素不会重复，并且可以进行交集、并集、差集等常见的集合操作
 
@@ -162,25 +162,28 @@ set2 = set([4, 5, 6, 7])      # 使用 set() 函数从列表创建集合
 
 ## Dict（字典）
 
-* 字典的每个键值 **key:value** 对用冒号 : 分割，每个Key-Value pairs之间用逗号 , 分割，整个字典包括在花括号 {} 中 ,格式如下所示：
+* 字典的元素形式为 Key-Value pair（键值对）。其中，Key（键）与 Value（值）之间用冒号分割： `key: value`。每个键值对之间用逗号 `,` 分割，整个字典包括在花括号 {} 中 ,格式如下所示：
     ```python
-    d = {key1 : value1, key2 : value2 }
+    d = {key1: value1, key2: value2 }
     ```
-* 其中，`key1: value1` 就称之为 Key-Value pairs（键值对）
-* Key 一般是唯一的、不可变的，如果重复，后加入字典的 Key-Value pairs 会替换前面加入的Key-Value pairs。值不需要唯一。
-* 以下为一个生成字典的事例。
-    ```python
-    tinydict = {'Alice': '2341', 
-            'Beth': '9102', 
-            'Cecil': '3258'}
-    ```
+  其中的 `key1: value1` 就称为一个键值对。
+* 键一般是唯一（不重复）的、不可变的（如果出现重复，后加入字典的键值对会替换掉先前的）。值则是不唯一（可重复）的、可变的。
+
+```python
+tinydict = {'Alice': '2341', 
+        'Beth': '9102', 
+        'Cecil': '3258'}
+```
 
 ---
 
-## Dict（字典）
+## Dict（字典）(cont'd)
 * Construct(构造): `di = {"1": 1, "2": 2, "3": 3}`
 * Visit(访问): `print(di["1"])`
 * Change(修改): `di["1"] = 100`
+  * **注意：**如果指定的键不存在，则会自动新建对应的键值对！
+    * 这也是最常用的向字典中插入新键值对的方法。
+  * 对于字典，关键词 `in` 用来检查**某个键**是否在其中：逻辑表达式 `"1" in di`
 * Delete(删除): `del di["1"]`
 
 ---
@@ -214,9 +217,10 @@ set2 = set([4, 5, 6, 7])      # 使用 set() 函数从列表创建集合
 ## OS 库之文件路径管理
 > 指定路径可以是绝对路径，也可以是相对路径！
 - `os.path.exists(path)`: 返回指定路径（可能是文件，也可能是文件夹）是否存在
-- `os.file.isdir / os.file.isfile`: 判断指定的路径是否为文件 / 文件夹
-- `os.file.getsize`: 获得指定路径所对应的文件大小
-- `os.makedirs(path, exist_ok = True)`: 根据指定路径创建文件夹。如果文件夹已经存在，则不进行操作（非常非常常用！） 
+- `os.path.isfile`: 判断指定的路径是否为文件 / 文件夹
+- `os.path.getsize`: 获得指定路径所对应的文件大小
+- `os.makedirs(path, exist_ok=True)`: 根据指定路径创建文件夹。若文件夹已存在则不会发生任何事情（非常非常常用！） 
+  > 注：其中 `exist_ok=True` 的意思是文件夹已经存在时不报错。如果改为 `exist_ok=False` 或删去，那么当文件夹存在时会报错 `FileExistsError` 。
 - ...... 还有很多！
 
 ---
