--- a/Lecture_04_Control_Flow/index.html
+++ b/Lecture_04_Control_Flow/index.html
@@ -488,7 +488,7 @@ while condition：
 - 当判断条件为 `False` 时，循环结束，否则一直循环
 - 为了保证不会进入死循环 (infinite loop)，我们需要在 **循环体** （也就是循环要做的事情）中对先前的判断条件 **有所改变**
 
-<img src="./while.png" width="80%"/>
+<img src="./images/image-9.png" width="80%"/>
 
 </div>
 
