--- a/Py进阶_Marp/index.html
+++ b/Py进阶_Marp/index.html
@@ -527,7 +527,7 @@ def calculate_area(shape, *dimensions):
       // options from URL query string
       var queryOptions = Reveal().getQueryHash() || {};
 
-      var options = extend(defaultOptions, {"_":["./Lecture_05_How_To_Use_Python/Py进阶_Raw.md"],"static":"static/Py进阶_Raw"}, queryOptions);
+      var options = extend(defaultOptions, {"_":["./Lecture_05_How_To_Use_Python/Py进阶_Marp.md"],"static":"static/Py进阶_Marp"}, queryOptions);
     </script>
 
 
