deploy: 9a6ac41c470fe9e91634669816b2e751a12cede8

--- a/Lecture_05_How_To_Use_Python/Lecture_05_How_To_Use_Python.html
+++ b/Lecture_05_How_To_Use_Python/Lecture_05_How_To_Use_Python.html
@@ -251,7 +251,7 @@ tinydict = {'Alice': '2341',
     - 这是用的绝对路径！
     - 你的 Python 应该可以运行这个代码，会打开你的计算器~
 
-**TODO:** Google 了一下发现运行终端指令已经不用 `os.system` 了（现在多用 `subprocess` 模块），而且进程管理还得看是什么操作系统，我的建议是把这块删了然后把相对绝对路径挪到上一页的文件路径管理去讲（毕竟文件路径管理用到相对路径了）
+<!-- **TODO:** Google 了一下发现运行终端指令已经不用 `os.system` 了（现在多用 `subprocess` 模块），而且进程管理还得看是什么操作系统，我的建议是把这块删了然后把相对绝对路径挪到上一页的文件路径管理去讲（毕竟文件路径管理用到相对路径了） -->
 
 <!--v-->
 ## OS 库之文件环境参数管理
