deploy: 49e01e2434e4dca5f66326e036c5b5be00bde2c1

--- a/Lecture_07_AI_Introduction/Lecture_07_AI_Introduction.html
+++ b/Lecture_07_AI_Introduction/Lecture_07_AI_Introduction.html
@@ -167,7 +167,7 @@
 ~~首先，你真的有文科生会用ChatGPT吗？~~ <!-- .element: class="fragment" -->
 
 - 这门课的课时有限，且没有考核 <!-- .element: class="fragment" -->
-- 在没有数学基础直接开始讲所谓的“Intro to AI”很容易囫囵吞枣 <!-- .element: class="fragment" -->
+- 在没有数学基础之前直接开始讲所谓的“Intro to AI”很容易囫囵吞枣 <!-- .element: class="fragment" -->
 - 理解到底什么是“AI”对初学者非常重要
 
 <!--v-->
@@ -180,7 +180,20 @@
 - Lecture 12：并不那么典型的人工智能
 - Lecture 13：现代人工智能在各个领域的应用、争议与价值
 
-还有什么想听的吗？~~现在加还来得及~~
+~~还有什么想听的吗？现在加还来得及~~
+
+<!--v-->
+
+## 这部分课程的目的是什么
+
+我们希望能帮助你获得以下能力：
+
+- 知道自然语言中不同场景下被滥用的“AI”这个称呼分别对应什么
+- 了解不同时代不同类型人工智能的理念
+- 学会辨别知识水平较低的自媒体~~营销号~~为了流量编造的谎言
+- ~~在你的家人和其他学校的朋友面前炫耀你已经完全了解AI了~~
+
+能做到这些的话你已经很厉害啦。至于AI的专业知识，未来还有许许多多的专业课等着你们去攻略。~~前面的区域以后再来探索吧~~
 
 <!--v-->
 
@@ -238,7 +251,7 @@
 只要走就能到！
 
 - 我们能怎么走？
-  - 网格图，四个方向走，不走回头路
+  - 网格图，四个方向选一个，不走回头路
   - 每个位置能选的走法有限
 - **穷举法**
   - 遍历（traverse）地图内的所有能走的路
@@ -250,14 +263,21 @@
 
 - 如何相对高效地寻找到一条相对短的路径呢？
   - 我们总是希望距离越短越好，所以……
-  - 每次走一段距离，就从重新计算当前位置和目标位置之间的距离，然后再重新规划路线，尽量遵循两点之间线段最短的原则
+  - 我们可以**优化**我们的选择
+  - 在决定下一次走的方向之前，我们看一下在能走的点中，哪个点离目标位置的距离最近
+  - 先走这个点，探索这个点的后续所有能走的路
+  - 如果这个点的后续情况探索完了，我们再走一下第二近的点，继续进行类似的搜索
+- 但如果这样枚举完所有路径的话，和之前的方法又有什么区别呢？
+  - 
 
-是不是比穷举法好得多？没错，这就是一个简单的算法。
+是不是比穷举法好得多？没错，这就是一个简单但有效的算法。
+
+> 事实上，上述算法涉及到了一个程序设计中非常重要的概念，叫做递归（recursion）。具体的分析比较复杂，我们这里不作过多探讨。
 
 
 <!--v-->
 
-## 算法是什么？
+## 那么，算法是什么？
 
 > An algorithm is a finite sequence of well-defined, computer-implementable instructions, typically to solve a class of problems or to perform a computation.
 >
@@ -390,11 +410,35 @@ AI在很大程度上是算法设计的结果
 - ML 算法基于通过提供给它的输入进行学习来预测输出。通过输入进行的学习称为训练过程。
 - 给出要学习的算法数据，并调整参数来解释数据。然后可以使用这些参数集来解释/预测新数据
 
+<!--v-->
+
+## “机器学习”和“人工智能”有什么区别？
+
+<!--v-->
+
+## 传统算法 VS 机器学习
+
+- 普通算法：
+- 传统机器学习：
+
+## 普通算法 VS 传统机器学习 VS 深度学习
+
+- 普通算法：
+- 传统机器学习：
+- 现代人工智能：
+
 <!--s-->
 
-## Takeaway Message
+# Part 4. 总结
 
-- 需要什么加什么
+## 倒数第二页了
+
+我们今天讲了什么？
+
+- 一个故意挖坑的引子
+- 一个课程大纲的详细版
+- 算法
+- 从算法走向机器学习
 
 <!--s-->
 
