deploy: 9b10c94ec007c6a9651b5cb22f0ee935fc1c65b7

--- a/Lecture_07_AI_Introduction/Lecture_07_AI_Introduction.html
+++ b/Lecture_07_AI_Introduction/Lecture_07_AI_Introduction.html
@@ -107,7 +107,7 @@
 
 <!--v-->
 
-## Chatbot 的现在：<img src="images/image-3.png" width="5%"> ChatGPT
+## Chatbot 的现在：<img src="images/image-3.png" width="5%" style="margin: 0px"> ChatGPT
 
 - 2022 年 11 月 30 日，它出生了
 - 彼时还是算法与数据结构助教的我马上拿它来测试我出的算法题
