deploy: 7bd1c7767d3f85bb72fe71f2b17c755b2682d4e9

--- a/Lecture_07_AI_Introduction/Lecture_07_AI_Introduction.html
+++ b/Lecture_07_AI_Introduction/Lecture_07_AI_Introduction.html
@@ -47,7 +47,7 @@
 
 欢迎开麦发言！打字也可以！ <!-- .element: class="fragment" -->
 
-每个小问题都会至少选择一位回答的同学倾情赠送~~可能没什么用的~~小礼物！ <!-- .element: class="fragment" -->
+<span>每个小问题都会至少选择一位回答的同学倾情赠送~~可能没什么用的~~小礼物！</span> <!-- .element: class="fragment" -->
 
 那接下来，我们的故事就将开始...... <!-- .element: class="fragment" -->
 
