deploy: 0cef6438ed2884c12904086f8e462dcc32ec76b5

--- a/Lecture_07_AI_Introduction/Lecture_07_AI_Introduction.html
+++ b/Lecture_07_AI_Introduction/Lecture_07_AI_Introduction.html
@@ -201,8 +201,8 @@
 
 - 知道自然语言中不同场景下被滥用的“AI”这个称呼分别对应什么 <!-- .element: class="fragment" -->
 - 了解不同时代不同类型人工智能的理念 <!-- .element: class="fragment" -->
-<span> - 学会辨别知识水平较低的自媒体~~营销号~~为了流量编造的谎言 </span> <!-- .element: class="fragment" -->
-<span> - ~~在你的家人和其他学校的朋友面前炫耀你已经完全了解AI了~~ <!-- .element: class="fragment" -->
+- <span> 学会辨别知识水平较低的自媒体~~营销号~~为了流量编造的谎言 </span> <!-- .element: class="fragment" -->
+- <span> ~~在你的家人和其他学校的朋友面前炫耀你已经完全了解AI了~~ <!-- .element: class="fragment" -->
 
 <span> 能做到这些的话你已经很厉害啦。至于AI的专业知识，未来还有许许多多的专业课等着你们去攻略。~~前面的区域以后再来探索吧~~ </span> <!-- .element: class="fragment" -->
 
@@ -270,7 +270,7 @@
 
 - 如何相对高效地寻找到一条相对短的路径呢？
   - 我们总是希望距离越短越好，所以…… <!-- .element: class="fragment" -->
-  <span> - 我们可以**优化**我们的选择 </span> <!-- .element: class="fragment" -->
+  - <span> 我们可以**优化**我们的选择 </span> <!-- .element: class="fragment" -->
   - 在决定下一次走的方向之前，我们看一下在能走的点中，哪个点离目标位置的距离最近 <!-- .element: class="fragment" -->
   - 先走这个点，探索这个点的后续所有能走的路 <!-- .element: class="fragment" -->
   - 如果这个点的后续情况探索完了，我们再走一下第二近的点，继续进行类似的搜索 <!-- .element: class="fragment" -->
@@ -318,7 +318,7 @@
 ## 算法的复杂度
 
 - 优秀的算法能够在较短的时间内找到问题的解，或者在相同的时间内处理更多的数据。 <!-- .element: class="fragment" -->
-<span> - 算法研究者们更关注算法的**渐进时间复杂度**（Big O 表示法） </span> <!-- .element: class="fragment" -->
+- <span> 算法研究者们更关注算法的**渐进时间复杂度**（Big O 表示法） </span> <!-- .element: class="fragment" -->
   - 随着问题规模的增长，算法执行时间或所需资源的增长趋势 <!-- .element: class="fragment" -->
   - 人话：数据量超级大的时候算法会不会卡死 <!-- .element: class="fragment" -->
   - 实际应用中，问题规模往往很大，渐进时间复杂度能够反映算法在大规模问题上的性能表现 <!-- .element: class="fragment" -->
@@ -425,18 +425,18 @@
 回到2024年的现在，你发现现在你已经学会机器学习了！ <!-- .element: class="fragment" -->
 - 什么？你说你还不会？ <!-- .element: class="fragment" -->
 - 在刚刚的学习过程中，你的学习和一个传统的算法相比，多了什么？ <!-- .element: class="fragment" -->
-- **输入的答案**（ground truth） <!-- .element: class="fragment" -->
+- <span> **输入的答案**（ground truth） </span> <!-- .element: class="fragment" -->
 - 这就是机器学习需要的东西 <!-- .element: class="fragment" -->
 
 ## 稍微形式化一点点
 
-- 类比人类的学习过程，在机器学习中：
-  - 认字的卡片就是训练集（training set）
-  - “一条横线，两条横线”，区分不同汉字的属性就是特征（feature）
-  - 学会了识字后总结出来的规律就是模型（model）
-- 通过训练集，不断识别特征，不断优化，最后形成有效的模型，这个过程就叫“机器学习”
+- 类比人类的学习过程，在机器学习中： <!-- .element: class="fragment" -->
+  - 认字的卡片就是训练集（training set） <!-- .element: class="fragment" -->
+  - “一条横线，两条横线”，区分不同汉字的属性就是特征（feature） <!-- .element: class="fragment" -->
+  - 学会了识字后总结出来的规律就是模型（model） <!-- .element: class="fragment" -->
+- 通过训练集，不断识别特征，不断优化，最后形成有效的模型，这个过程就叫“机器学习” <!-- .element: class="fragment" -->
 
-机器学习诞生的意义就是，一些以前看起来很复杂的问题中难以建模、难以捕捉的特征可以被让模型根据ground truth自我纠错的方式所解决
+机器学习诞生的意义就是，一些以前看起来很复杂的问题中难以建模、难以捕捉的特征可以被让模型根据ground truth自我纠错的方式所解决 <!-- .element: class="fragment" -->
 
 <!--v-->
 
@@ -455,7 +455,7 @@
 最后，希望这个对比能够帮助你更好地理解它们：<!-- .element: class="fragment" -->
 
 - 传统算法：完全由人类经验得出的理论 <!-- .element: class="fragment" -->
-- **机器学习：人类经验被用来构建让机器学习经验的理论** <!-- .element: class="fragment" -->
+- <span> **机器学习：人类经验被用来构建让机器学习经验的理论** </span> <!-- .element: class="fragment" -->
 
 ## 普通算法 VS 传统机器学习 VS 深度学习
 
@@ -463,7 +463,7 @@
 
 - 传统算法：完全由人类经验得出的理论
 - 传统机器学习：人类经验被用来构建**让机器学习经验**的理论
-- **深度学习（当代的人工智能）：人类经验与机器学习的经验逐渐失去直接关联**，即机器学习到的经验随着参数与网络的增加使得人类逐渐无法理解它们~~变成了真正的魔法~~ <!-- .element: class="fragment" -->
+- <span> **深度学习（当代的人工智能）：人类经验与机器学习的经验逐渐失去直接关联**，即机器学习到的经验随着参数与网络的增加使得人类逐渐无法理解它们~~变成了真正的魔法~~ </span> <!-- .element: class="fragment" -->
 - 人类或许可以观察一个古早机器学习算法学出来的参数，但很难理解GPT这种模型一层的参数是什么意思 <!-- .element: class="fragment" -->
 
 这就是我们下节课的内容了！ <!-- .element: class="fragment" -->
@@ -480,7 +480,7 @@
 - 一个课程大纲的详细版 <!-- .element: class="fragment" -->
 - 算法的基本概念 <!-- .element: class="fragment" -->
 - 从传统算法走向机器学习 <!-- .element: class="fragment" -->
-- ~~下集预告~~ <!-- .element: class="fragment" -->
+- <span> ~~下集预告~~ </span> <!-- .element: class="fragment" -->
 
 <!--s-->
 
