deploy: 9981c2fc19f9442e605ae1f68ac55b7504b6ef66

--- a/Lecture_07_AI_Introduction/Lecture_07_AI_Introduction.html
+++ b/Lecture_07_AI_Introduction/Lecture_07_AI_Introduction.html
@@ -319,7 +319,9 @@
 
 <!--v-->
 
-## 算法的复杂度
+## 算法的时间复杂度
+
+时间复杂度（time complexity），顾名思义也就是在时间维度上复杂的程度。
 
 - 优秀的算法能够在较短的时间内找到问题的解，或者在相同的时间内处理更多的数据。 <!-- .element: class="fragment" -->
 - <span> 算法研究者们更关注算法的**渐进时间复杂度**（Big O 表示法） </span> <!-- .element: class="fragment" -->
@@ -328,9 +330,9 @@
   - 实际应用中，问题规模往往很大，渐进时间复杂度能够反映算法在大规模问题上的性能表现 <!-- .element: class="fragment" -->
 <!--v-->
 
-## 算法的复杂度
+## 算法的时间复杂度
 
-算法的时间复杂度只是评判算法优劣的一个相对指标 <!-- .element: class="fragment" -->
+不过，算法的时间复杂度只是评判算法优劣的一个相对指标 <!-- .element: class="fragment" -->
 
 - 实际上还需要考虑以下很多问题： <!-- .element: class="fragment" -->
   - 算法的具体实现细节 <!-- .element: class="fragment" -->
@@ -341,7 +343,7 @@
 在实际应用中，我们通常会通过实验来测试算法在特定条件下的性能表现，并选择一个在大多数情况下都能表现良好的算法。 <!-- .element: class="fragment" -->
 
 今天这节课你只需要知道：写两个循环通常会比一个慢，因此写代码的时候不要疯狂堆循环 <!-- .element: class="fragment" -->
-- 这一点在之后的信导以及日常代码中困难有帮助 <!-- .element: class="fragment" -->
+- 这一点在之后的信导以及日常代码中可能有帮助 <!-- .element: class="fragment" -->
 
 <!--v-->
 
@@ -456,7 +458,7 @@
 
 - 第一个魔法盒子里有一部分输入数据、对应的输出数据 <!-- .element: class="fragment" -->
 - 这个魔法盒子根据它们输出模型 <!-- .element: class="fragment" -->
-- 第二个魔法盒子根据模型和另一部分输入数据输出结果 <!-- .element: class="fragment" -->
+- 第二个魔法盒子根据模型和另一部分输入数据（也就是测试集，test set）输出结果 <!-- .element: class="fragment" -->
 
 <!--v-->
 
@@ -478,7 +480,7 @@
 - **深度学习（当代的人工智能）：人类经验与机器学习的经验逐渐失去直接关联**，即机器学习到的经验随着参数与网络的增加使得人类逐渐无法理解它们~~变成了真正的魔法~~
 - 人类或许可以观察一个古早机器学习算法学出来的参数，但很难理解GPT这种模型一层的参数是什么意思 <!-- .element: class="fragment" -->
 
-这就是我们下节课的内容了！ <!-- .element: class="fragment" -->
+这就是我们下下节课（Lecture 9）的内容了！ <!-- .element: class="fragment" -->
 
 <!--s-->
 
@@ -500,7 +502,7 @@
 - 一个课程大纲的详细版 <!-- .element: class="fragment" -->
 - 算法的基本概念 <!-- .element: class="fragment" -->
 - 从传统算法走向机器学习 <!-- .element: class="fragment" -->
-- <span> ~~下集预告~~ </span> <!-- .element: class="fragment" -->
+- <span> ~~下下集预告~~ </span> <!-- .element: class="fragment" -->
 
 <!--s-->
 
