deploy: c8c0784752868b6a39f60705a9a18c3ebb2dfd86

--- a/Lecture_07_AI_Introduction/Lecture_07_AI_Introduction.html
+++ b/Lecture_07_AI_Introduction/Lecture_07_AI_Introduction.html
@@ -41,6 +41,32 @@
 
 <!--v-->
 
+## Quiz
+
+一个小测试！
+
+请你在不使用任何字符串方法的情况下，把字符串里的所有小写a改为大写B。
+
+例子：
+
+输入：A good apple is a good Banana!
+输出：A good Bpple is B good Bbnbnb!
+
+<!--v-->
+
+## Quiz
+
+一个小测试的加强版！
+
+请你在不使用任何字符串方法的情况下，把字符串里的所有小写a改为大写B，大写B改为小写a。
+
+例子：
+
+输入：A good apple is a good Banana!
+输出：A good Bpple is B good aBnBnB!
+
+<!--v-->
+
 ## 今天将有很多互动环节！
 
 为了让课程变得更有意思，今天的课准备了很多小问题给大家！
