--- a/Lecture_07_AI_Introduction/index.html
+++ b/Lecture_07_AI_Introduction/index.html
@@ -50,20 +50,7 @@
 例子：
 
 输入：A good apple is a good Banana!
-输出：A good Bpple is B good Bbnbnb!
-
-<!--v-->
-
-## Quiz
-
-一个小测试的加强版！
-
-请你在不使用任何字符串方法的情况下，把字符串里的所有小写a改为大写B，大写B改为小写a。
-
-例子：
-
-输入：A good apple is a good Banana!
-输出：A good Bpple is B good aBnBnB!
+输出：A good Bpple is B good BBnBnB!
 
 <!--v-->
 
@@ -130,7 +117,7 @@
 
 ## Chatbot 的发展：微软小冰
 
-<img src="images/xiaoice.jpg" width="55%" style="display: block; margin: 0 auto;">
+<img src="images/xiaoice.jpg" width="25%" style="display: block; margin: 0 auto;">
 
 <!--v-->
 
